Split functions.  Created generics for matrix and Seurat 3.0 objects.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,9 @@ Imports:
     tidyr,
     scales,
     RColorBrewer,
-    fgsea
+    fgsea,
+    Seurat (>= 3.0),
+    magrittr
 Suggests:
     testthat,
     knitr,
@@ -39,7 +41,7 @@ Suggests:
     covr,
     ComplexHeatmap
 VignetteBuilder: knitr
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 biocViews:
     fgsea,
     recount,
